se adelantan cuadros

--- a/MiPrimeraAplicacionEnNetCore/Views/Especialidad/Index.cshtml
+++ b/MiPrimeraAplicacionEnNetCore/Views/Especialidad/Index.cshtml
@@ -7,9 +7,9 @@
 <table class="table">
     <thead class="thead-dark">
         <tr>
-            <th>Id Especialidad</th>
-            <th>Nombre</th>
-            <th>Descripción</th>
+            <th>@Html.DisplayNameFor(model=>model.iidespecialidad)</th>
+            <th>@Html.DisplayNameFor(model=>model.nombre)</th>
+            <th>@Html.DisplayNameFor(model=>model.description)</th>
         </tr>
     </thead>
     <tbody>
