--- a/MiPrimeraAplicacionEnNetCore/Views/Persona/Index.cshtml
+++ b/MiPrimeraAplicacionEnNetCore/Views/Persona/Index.cshtml
@@ -7,10 +7,10 @@
 <table class="table">
     <thead class="thead-dark">
         <tr>
-            <th>ID Persona</th>
-            <th>Nombre</th>
-            <th>Email</th>
-            <th>Sexo</th>
+            <th>@Html.DisplayNameFor(model=>model.iidPersona)</th>
+            <th>@Html.DisplayNameFor(model=>model.nombreCompleto)</th>
+            <th>@Html.DisplayNameFor(model=>model.email)</th>
+            <th>@Html.DisplayNameFor(model=>model.nombreSexo)</th>
         </tr>
     </thead>
     <tbody>
