--- a/MiPrimeraAplicacionEnNetCore/Views/Shared/_Layout.cshtml
+++ b/MiPrimeraAplicacionEnNetCore/Views/Shared/_Layout.cshtml
@@ -28,6 +28,21 @@
                                 Persona
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Sede" asp-action="Index">
+                                Sede
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Pagina" asp-action="Index">
+                                Páginas
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Medicamento" asp-action="Index">
+                                Medicamentos
+                            </a>
+                        </li>
                         @*<li class="nav-item">
             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </li>*@
