--- a/MiPrimeraAplicacionEnNetCore/Views/Persona/Index.cshtml
+++ b/MiPrimeraAplicacionEnNetCore/Views/Persona/Index.cshtml
@@ -2,8 +2,17 @@
 @model IEnumerable<PersonaCLS>
 @{
     ViewData["Title"] = "Index";
+
+    List<SelectListItem> listaSexo = ViewBag.listaSexo;
 }
 
+
+<form id="frmEnviar" asp-controller="Persona" asp-action="Index" method="post" style="display:grid; grid-template-columns:1fr 2fr 1fr 1fr" class="mb-2">
+    <label>Ingrese el Sexo</label>
+    @Html.DropDownList("iidSexo", listaSexo, new { @class="form form-control"})
+    <input type="submit" class="btn btn-primary" value="Buscar" />
+    <input type="button" class="btn btn-danger" value="limpiar" onclick="Limpiar()"/>
+</form>
 <table class="table">
     <thead class="thead-dark">
         <tr>
@@ -25,4 +34,11 @@
         }
     </tbody>
 </table>
+
+<script>
+    function Limpiar() {
+        document.getElementById("iidSexo").value = "";
+        document.getElementById("frmEnviar").submit();
+    }
+</script>
 
