--- a/MiPrimeraAplicacionEnNetCore/Views/Medicamento/Index.cshtml
+++ b/MiPrimeraAplicacionEnNetCore/Views/Medicamento/Index.cshtml
@@ -2,8 +2,14 @@
 
 @{
     ViewData["Title"] = "Index";
+    List<SelectListItem> listaForma = ViewBag.listaForma;
 }
 
+<form style="display:grid; grid-template-columns:1fr 2fr" class="mb-2" id="frmEnviar">
+    <label>Ingrese el nombre de la forma farmaceutica</label>
+    @Html.DropDownList("iidFOrmaFarmaceutica", listaForma, new { @class="form form-control"})
+
+</form>
 <table class="table">
     <thead class="thead-dark">
         <tr>
@@ -48,3 +54,10 @@
 }
     </tbody>
 </table>
+
+<script>
+    var iidFOrmaFarmaceutica = document.getElementById("iidFOrmaFarmaceutica");
+    iidFOrmaFarmaceutica.onchange = function() {
+        document.getElementById("frmEnviar").submit();
+    }
+</script>
