--- a/MiPrimeraAplicacionEnNetCore/Views/Shared/_Layout.cshtml
+++ b/MiPrimeraAplicacionEnNetCore/Views/Shared/_Layout.cshtml
@@ -43,6 +43,11 @@
                                 Medicamentos
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="TipoUsuario" asp-action="Index">
+                                Tipo Usuario
+                            </a>
+                        </li>
                         @*<li class="nav-item">
             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </li>*@
