--- a/MiPrimeraAplicacionEnNetCore/Views/Pagina/Index.cshtml
+++ b/MiPrimeraAplicacionEnNetCore/Views/Pagina/Index.cshtml
@@ -2,7 +2,16 @@
 @model IEnumerable<PaginaCLS>;
 @{
     ViewData["Title"] = "Index";
+
+    string mensaje = ViewBag.mensaje;
 }
+
+<form asp-controller="Pagina" asp-action="Index" class="mb-2" id="frmFormulario" method="post" >
+    <label>Ingrese el mensaje:</label>
+    <input id="txtMensaje" value="@mensaje" type="text" name="mensaje" class="form-check form-control"/>
+    <input id="btnBuscar" type="submit" value="Buscar" class="btn btn-info"/>
+    <input id="btnLimpiar" type="button" value="Limpiar" onclick="LimpiarCampos()" class="btn alert-danger"/>
+</form>
 
 <table class="table">
     <thead>
@@ -25,6 +34,14 @@
         }
     </tbody>
 </table>
+
+<script>
+    function LimpiarCampos()
+    {
+        document.getElementById('txtMensaje').value = '';
+        document.getElementById('frmFormulario').submit();
+    }
+</script>
 
 
 
