Se adicionan vistas de agregar

--- a/MiPrimeraAplicacionEnNetCore/Views/Especialidad/Index.cshtml
+++ b/MiPrimeraAplicacionEnNetCore/Views/Especialidad/Index.cshtml
@@ -5,6 +5,7 @@
 
     string nombreEspecialidad = ViewBag.nombreEspecialidad;
 }
+<a class="btn alert-secondary" asp-action="Agregar" asp-controller="Especialidad">Agregar</a>
 
 <form asp-controller="Especialidad" asp-action="Index" method="post" class="mb-2" id="frmFormulario"
       style="display:grid; grid-template-columns: 1fr 2fr 1fr 1fr">
