--- a/MiPrimeraAplicacionEnNetCore/Views/Pagina/Index.cshtml
+++ b/MiPrimeraAplicacionEnNetCore/Views/Pagina/Index.cshtml
@@ -5,7 +5,7 @@
 
     string mensaje = ViewBag.mensaje;
 }
-
+<a class="btn btn-primary" asp-action="Agregar" asp-controller="Pagina">Nuevo</a>
 <form asp-controller="Pagina" asp-action="Index" class="mb-2" id="frmFormulario" method="post" >
     <label>Ingrese el mensaje:</label>
     <input id="txtMensaje" value="@mensaje" type="text" name="mensaje" class="form-check form-control"/>
