--- a/MiPrimeraAplicacionEnNetCore/Views/TipoUsuario/Index.cshtml
+++ b/MiPrimeraAplicacionEnNetCore/Views/TipoUsuario/Index.cshtml
@@ -9,8 +9,11 @@
 
 }
 
-<h1>Index</h1>
+<h1>Tipo Usuario</h1>
+<hr />
 
+<a class="btn btn-primary" asp-action="Agregar" asp-controller="TipoUsuario">Agregar</a>
+<hr />
 <form asp-controller="TipoUsuario" asp-action="Index">
     <input type="submit" value="Enviar" class="btn btn-primary"/>
     <table class="table">
