--- a/MiPrimeraAplicacionEnNetCore/Views/Shared/_Layout.cshtml
+++ b/MiPrimeraAplicacionEnNetCore/Views/Shared/_Layout.cshtml
@@ -6,6 +6,10 @@
     <title>@ViewData["Title"] - MiPrimeraAplicacionEnNetCore</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href=~/css/style.css/>
+    <script src="https://kit.fontawesome.com/efc86c1591.js" crossorigin="anonymous"></script>
+
+
 </head>
 <body>
     <header>
