--- a/MiPrimeraAplicacionEnNetCore/Views/TipoUsuario/Index.cshtml
+++ b/MiPrimeraAplicacionEnNetCore/Views/TipoUsuario/Index.cshtml
@@ -75,7 +75,7 @@
     </form>
 
     <form asp-action="Eliminar" asp-controller="TipoUsuario" method="post" id="frmEliminarTipoUsuario">
-        <input type="hidden" name="iidTipoUsuario" id="txtIdTipoUsuario" onclick="EliminarTipoUsuario(@IidTipoUsuario)"/>
+        <input type="hidden" name="iidTipoUsuario" id="txtIdTipoUsuario"/>
     </form>
     
 
