--- a/MiPrimeraAplicacionEnNetCore/Views/Especialidad/Index.cshtml
+++ b/MiPrimeraAplicacionEnNetCore/Views/Especialidad/Index.cshtml
@@ -34,6 +34,8 @@
                 <td>
                     <i class="fas fa-trash-alt btn btn-danger mouse-Pointer" onclick="EliminarEspecialidad(@oEspecialidad.iidespecialidad)">
                     </i>
+                    <a class="fas fa-edit btn btn-primary mouse-Pointer" aria-hidden="true" asp-controller="Especialidad" asp-action="Editar" asp-route-id="@oEspecialidad.iidespecialidad">
+                    </a>
                 </td>
                 
             </tr>
