--- a/MiPrimeraAplicacionEnNetCore/Views/Medicamento/Editar.cshtml
+++ b/MiPrimeraAplicacionEnNetCore/Views/Medicamento/Editar.cshtml
@@ -11,6 +11,11 @@
     <div class="col-md-6">
         <form asp-action="Guardar" asp-controller="Medicamento" method="post" id="frmEnviar">
             <div class="form-group">
+                <label asp-for="iidMedicamento"></label>
+                <input type="text" readonly="true" class="form form-control" asp-for="iidMedicamento" />
+                <span asp-validation-for="nombre" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="nombre"></label>
                 <input type="text" class="form form-control" asp-for="nombre" />
                 <span asp-validation-for="nombre" class="text-danger"></span>
@@ -65,4 +70,3 @@
         })
     }
 </script>
-
