--- a/MiPrimeraAplicacionEnNetCore/Views/Persona/Agregar.cshtml
+++ b/MiPrimeraAplicacionEnNetCore/Views/Persona/Agregar.cshtml
@@ -11,9 +11,12 @@
 <hr />
 <div class="row">
     <div class="col-md-6">
-        <form asp-action="Agregar" id="frmEnviar" method="post">
+        <form asp-action="Guardar" id="frmEnviar" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            
+            @if(Model!= null && !string.IsNullOrEmpty(Model.mensajeError))
+                {
+                    <p class="text-danger">@Model.mensajeError</p>
+                }
             <div class="form-group">
                 <label asp-for="nombre" class="control-label"></label>
                 <input asp-for="nombre" class="form-control" />
