--- a/MiPrimeraAplicacionEnNetCore/Views/TipoUsuario/Index.cshtml
+++ b/MiPrimeraAplicacionEnNetCore/Views/TipoUsuario/Index.cshtml
@@ -12,7 +12,7 @@
 <h1>Tipo Usuario</h1>
 <hr />
 
-<a class="btn btn-primary" asp-action="Agregar" asp-controller="TipoUsuario">Agregar</a>
+<a class="btn btn-primary" asp-action="Guardar" asp-controller="TipoUsuario">Agregar</a>
 <hr />
 <form asp-controller="TipoUsuario" asp-action="Index">
     <input type="submit" value="Enviar" class="btn btn-primary"/>
