--- a/MiPrimeraAplicacionEnNetCore/Views/Especialidad/Agregar.cshtml
+++ b/MiPrimeraAplicacionEnNetCore/Views/Especialidad/Agregar.cshtml
@@ -14,6 +14,10 @@
                 <label asp-for="nombre"></label>
                 <input asp-for="nombre" class="form-check form--control"/>
                 <span asp-validation-for="nombre" class="text-danger"></span>
+                @if(Model != null && !string.IsNullOrEmpty(Model.mensajeError))
+                {
+                    <p class="text-danger">El nombre de la especialidad ya existe </p>
+                }
             </div>
             <div class=form-group>
                 <label asp-for="description"></label>
