--- a/MiPrimeraAplicacionEnNetCore/Views/TipoUsuario/Agregar.cshtml
+++ b/MiPrimeraAplicacionEnNetCore/Views/TipoUsuario/Agregar.cshtml
@@ -7,16 +7,24 @@
 <hr />
 <div class="row">
     <div class="col-md-6">
-        <form asp-controller="TipoUsuario" asp-action="Agregar" method="post" id="frmEnviar">
+        <form asp-controller="TipoUsuario" asp-action="Guardar" method="post" id="frmEnviar">
             <div class="form-group">
                 <label asp-for="nombre" class="control-label"></label>
                 <input asp-for="nombre" class="form-control"/>
                 <span asp-validation-for="nombre" class="text-danger"></span>
+                @if (Model != null && !String.IsNullOrEmpty(Model.mensajeErrorNombre ))
+                {
+                    <p class="text-danger">@Model.mensajeErrorNombre</p>
+                }
             </div>
             <div class="form-group">
                 <label asp-for="descripcion" class="control-label"></label>
                 <input asp-for="descripcion" class="form-control"/>
                 <span asp-validation-for="descripcion" class="text-danger"></span>
+                 @if (Model != null &&!String.IsNullOrEmpty(Model.mensajeErrorDescripcion ))
+                {
+                    <p class="text-danger">@Model.mensajeErrorDescripcion</p>
+                }
             </div>
             <div class="form-group">
                 <input type="button" value="Guardar" onclick="Abrir()" class="btn btn-primary" />
