--- a/MiPrimeraAplicacionEnNetCore/Views/Persona/Agregar.cshtml
+++ b/MiPrimeraAplicacionEnNetCore/Views/Persona/Agregar.cshtml
@@ -51,6 +51,10 @@
                 <label asp-for="email" class="control-label"></label>
                 <input asp-for="email" class="form-control" />
                 <span asp-validation-for="email" class="text-danger"></span>
+                @if (Model != null && !String.IsNullOrEmpty(Model.mensajeErrorEmail))
+                {
+                    <p class="text-danger">@Model.mensajeErrorEmail</p>
+                }
             </div>
             <div class="form-group">
                 <label asp-for="iidSexo" class="control-label"></label>
