--- a/MiPrimeraAplicacionEnNetCore/Views/Shared/_Layout.cshtml
+++ b/MiPrimeraAplicacionEnNetCore/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href=~/css/style.css/>
+    <link rel="stylesheet" href="~/css/paginate.css"/>
     <script src="https://kit.fontawesome.com/efc86c1591.js" crossorigin="anonymous"></script>
 
 
@@ -74,6 +75,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/paginate.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
