se comienza implementación en word

--- a/MiPrimeraAplicacionEnNetCore/Views/Especialidad/Index.cshtml
+++ b/MiPrimeraAplicacionEnNetCore/Views/Especialidad/Index.cshtml
@@ -104,10 +104,15 @@
 
     function ExportarWord(){
          document.getElementById("tipoReporte").value = "Word"
+          var frmReporte = document.getElementById("frmReporte");
+          frmReporte.submit();
     }
 
     function ExportarPDF(){
          document.getElementById("tipoReporte").value = "PDF"
+          var frmReporte = document.getElementById("frmReporte");
+          frmReporte.submit();
+
     }
 
 </script>
