--- a/MiPrimeraAplicacionEnNetCore/Views/Sede/Index.cshtml
+++ b/MiPrimeraAplicacionEnNetCore/Views/Sede/Index.cshtml
@@ -121,6 +121,9 @@
 
     function ExportarPDF(){
          document.getElementById("tipoReporte").value = "PDF"
+          var frmReporte = document.getElementById("frmReporte");
+          frmReporte.submit();
+
     }
 
 </script>
