--- a/MiPrimeraAplicacionEnNetCore/Views/Sede/Index.cshtml
+++ b/MiPrimeraAplicacionEnNetCore/Views/Sede/Index.cshtml
@@ -8,6 +8,7 @@
 <input type="button" value="Exportar Excel" class="btn-primary btn" onclick="ExportarExcel()"/>
 <input type="button" value="Exportar Word" class="btn-primary btn" onclick="ExportarWord()"/>
 <input type="button" value="Exportar pdf" class="btn-primary btn" onclick="ExportarPDF()"/>
+<input type="button" value="Imprimir" class="btn-primary btn" onclick="Imprimir()"/>
 
 <form id="frmEnviar" asp-controller="Sede" asp-action="Index" class="mb-2" method="post">
     <label>Ingrese nombre sede</label>
@@ -31,7 +32,7 @@
                     Operaciones
                 </th>
             </tr>
-            <tr>
+            <tr id="tcheck">
                 <th>
                     <input type="checkbox" checked name="nombrePropiedades" value="iidSede" />
                     <input type="hidden" name="tipoReporte" id="tipoReporte" />
@@ -117,6 +118,7 @@
 
     function ExportarWord(){
          document.getElementById("tipoReporte").value = "Word"
+         frmReporte.submit();
     }
 
     function ExportarPDF(){
